--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,8 +1,8 @@
 name: tweenengine
 author: Xavier Guzman <xaguzman@gmail.com>
-version: 0.9.0
+version: 0.10.0
 homepage: https://github.com/xaguzman/tween-engine-dart
-description: "A port of the java Universal tween engine created by Aurelien Ribbon. This library helps you to animate any attribute for any object"
+description: "A port of the java Universal tween engine created by Aurelien Ribbon. This library helps you to animate any attribute for any object."
 environment:
   sdk: ">=1.1.1 <2.0.0"
 dependencies:
