--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,4 +7,5 @@ environment:
   sdk: '>=1.1.1 <2.0.0'
 dev_dependencies:
   browser: any
-  unittest: '>=0.9.0 <0.10.0'
+#  unittest: '>=0.9.0 <0.10.0'
+  test: "^0.12.13"
