--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: tweenengine
-version: 0.11.1
+version: 0.12.0-dev.0
 author: Xavier Guzman <xaguzman@gmail.com>
 description: A port of the java Universal tween engine created by Aurelien Ribbon. This library helps you to animate any attribute for any object.
 homepage: https://github.com/xaguzman/tween-engine-dart
@@ -7,5 +7,4 @@ environment:
   sdk: '>=1.1.1 <2.0.0'
 dev_dependencies:
   browser: any
-#  unittest: '>=0.9.0 <0.10.0'
   test: "^0.12.13"
