--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,7 +4,7 @@ author: Xavier Guzman <xaguzman@gmail.com>
 description: A port of the java Universal tween engine created by Aurelien Ribbon. This library helps you to animate any attribute for any object.
 homepage: https://github.com/xaguzman/tween-engine-dart
 environment:
-  sdk: '>=1.1.1 <2.0.0'
+  sdk: '>=2.0.0-dev <2.0.0'
 dev_dependencies:
   browser: any
-  test: "^0.12.13"
+  test: "^1.2.0"
