--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -6,5 +6,6 @@ homepage: https://github.com/xaguzman/tween-engine-dart
 environment:
   sdk: '>=2.0.0-dev <2.0.0'
 dev_dependencies:
-  browser: any
+  build_runner: ^0.9.0
+  build_web_compilers: any
   test: "^1.2.0"
