--- a/.travis.yml
+++ b/.travis.yml
@@ -2,8 +2,8 @@ language: dart
 
 dart:
   # Install the latest stable release
-  - dev
+  # - dev
   #- stable
-  #- 2.0.0
+  - 2.0.0
 
 with_content_shell: true
