--- a/.travis.yml
+++ b/.travis.yml
@@ -6,4 +6,8 @@ dart:
   #- stable
   - 2.0.0
 
-with_content_shell: true
+#with_content_shell: true
+dart_task:
+- test: --platform vm
+- test: --platform chrome
+- test: --platform firefox
